# WhatTheElf

./: .gitignore  Cargo.toml  Main.lean  QEMU_CRASHES.md  README.md  WhatTheElf.lean  check.sh  crashes.json  deploy.sh  err  findings.json  fuzz.sh  gen.sh  index.html  lake-manifest.json  lakefile.lean  manifest.yaml  report.sh  setup.sh  whattheelf.py
.github/workflows/: ci.yml
WhatTheElf/: Basic.lean  Dynamic.lean  ElfHeader.lean  Macro.lean  Note.lean  ProgramHeader.lean  Rela.lean  Relr.lean  SectionHeader.lean  Strtab.lean  Symtab.lean  Version.lean
crashes/: crash_00_sig7.elf  crash_01_sig11.elf  crash_04_sig11.elf  crash_06_sig11.elf  crash_07_sig11.elf  glibc_02_sig11.elf  glibc_03_sig11.elf  glibc_05_sig11.elf  musl_00_dynlink_c_261.elf  musl_03_do_relr_relocs.elf  musl_04___dls3.elf  musl_05_memset.elf  musl_07_do_relocs.elf  musl_08_do_relocs.elf  musl_10___dls3.elf  musl_12_memcpy.elf  objdump_00_so_sigsegv.elf  qemu_00_pgb_dynamic_assert.elf
crashes-musl/: musl_01_reloc_all.elf  musl_02_load_direct_deps.elf  musl_09_do_relocs.elf
results/eu-elflint/: bad_class_elf32.stdout  bad_data_big_endian.stdout  bad_ehsize_short.stdout  bad_file_type.stdout  bad_file_version.stdout  bad_phentsize_large.stdout  note_name_oob.stdout  (+42 more)
scripts/: afl-allowlist.txt  aflrt.c  build_musl.sh  exitfirst.c  instrument_loader.sh  musl-allowlist.txt  run_campaign.sh  setup_fuzz.sh
src/: backend.rs  case.rs  cases.rs  crash.rs  crashes.rs  elf.rs  lib.rs
tests/: EmitFixtures.lean  Fixtures.lean  FuzzGuard.lean  Negative.lean  RoundtripCheck.lean  differential.py  fuzz.py
(+1108 files in other folders)
