[package]
name = "whattheelf"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
nix = { version = "0.29", features = ["signal"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "1"

[[bin]]
name = "gen"
path = "src/bin/gen.rs"

[[bin]]
name = "check"
path = "src/bin/check.rs"

[[bin]]
name = "report"
path = "src/bin/report.rs"

[[bin]]
name = "kernel-execve"
path = "src/bin/kernel_execve.rs"
